# Allbotix_amr

./: README.md  package.xml  setup.py
amr_firmware_v2/: amr_firmware_v2.ino
amr_slam/: arduino_bridge.py  camera_publisher.py  save_map.py  scan_relay.py
config/: 99-amr-devices.rules  nav2_params.yaml  slam.rviz  slam_toolbox_params.yaml  slam_view.rviz  ydlidar_params.yaml
launch/: localization.launch.py  mapping.launch.py  offboard_sensors.launch.py
map/: office_map.pgm  office_map.yaml  office_map3.pgm  office_map3.yaml  office_map4.pgm  office_map4.yaml
