<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_slam</name>
  <version>1.0.0</version>
  <description>AMR SLAM package: Arduino bridge, odometry, YDLidar, and SLAM Toolbox</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_bringup</depend>

  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
